force-app/main/default/objects/Process_Deactivation__c/Process_Deactivation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Allows for the specification that certain categories of processes (E.g. All Workflow Rules, All Processes) should be switched off for a given User, Profile or the whole Organisation</description>
    <label>Process Deactivation</label>
</CustomObject>