force-app/main/default/objects/Process_Deactivation__c/fields/Disable_All_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, disables all validation rules in the Org, provided they have been built using this custom setting</description>
    <label>Disable All Validation Rules</label>
    <type>Checkbox</type>
</CustomField>