force-app/main/default/objects/Process_Deactivation__c/fields/Disable_Processes__c.field-meta.xml
<CustomField>
    <fullName>Disable_Processes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, disables all automation process in the Org provided they have been built correctly to spec with a first node that checks the value of this field</description>
    <label>Disable Processes</label>
    <type>Checkbox</type>
</CustomField>